Move amici.petab to amici.importers.petab
and all petab v1 functionality to amici.importers.petab.v1.

--- a/doc/examples/example_errors.ipynb
+++ b/doc/examples/example_errors.ipynb
@@ -11,11 +11,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1863901917703506",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "%matplotlib inline\n",
     "import os\n",
@@ -34,8 +33,12 @@
     "    run_simulation,\n",
     "    simulation_status_to_str,\n",
     ")\n",
-    "from amici.petab.petab_import import import_petab_problem\n",
-    "from amici.petab.simulations import EDATAS, RDATAS, simulate_petab\n",
+    "from amici.importers.petab.v1 import (\n",
+    "    EDATAS,\n",
+    "    RDATAS,\n",
+    "    import_petab_problem,\n",
+    "    simulate_petab,\n",
+    ")\n",
     "from amici.plotting import plot_jacobian, plot_state_trajectories\n",
     "from petab.v1.sbml import get_sbml_model\n",
     "\n",
@@ -48,7 +51,8 @@
     "        import benchmark_models_petab\n",
     "    except ModuleNotFoundError:\n",
     "        print(\"** Please restart the kernel. **\")"
-   ]
+   ],
+   "id": "b9e6cb8843da8bc3"
   },
   {
    "cell_type": "markdown",
