--- a/doc/examples/example_jax/ExampleJax.ipynb
+++ b/doc/examples/example_jax/ExampleJax.ipynb
@@ -274,23 +274,16 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6ada3fb8",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-10-18T20:36:51.765461Z"
-    },
-    "jupyter": {
-     "is_executing": true
-    }
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "from amici.petab.petab_import import import_petab_problem\n",
+    "from amici.importers.petab.v1 import import_petab_problem\n",
     "\n",
     "amici_model = import_petab_problem(petab_problem, compile_=True, verbose=False)"
-   ]
+   ],
+   "id": "4c510f3e65879888"
   },
   {
    "cell_type": "markdown",
@@ -311,14 +304,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "72053647",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import amici\n",
-    "from amici.petab.simulations import simulate_petab\n",
+    "from amici.importers.petab.v1 import simulate_petab\n",
     "\n",
     "amici_solver = amici_model.create_solver()\n",
     "amici_solver.set_sensitivity_order(amici.SensitivityOrder.first)\n",
@@ -336,7 +328,8 @@
     "        tuple(ret[\"sllh\"][par_id] for par_id in petab_problem.x_free_ids)\n",
     "    )\n",
     "    return llh, sllh"
-   ]
+   ],
+   "id": "beb890bd2f3d0880"
   },
   {
    "cell_type": "markdown",
