--- a/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "import petab.v1 as petab\n",
-    "from amici.petab.petab_import import import_petab_problem\n",
+    "from amici.importers.petab.v1 import import_petab_problem\n",
     "\n",
     "# Define the model name and YAML file location\n",
     "model_name = \"Boehm_JProteomeRes2014\"\n",
@@ -566,7 +566,7 @@
    "outputs": [],
    "source": [
     "import amici\n",
-    "from amici.petab import simulate_petab\n",
+    "from amici.importers.petab.v1 import simulate_petab\n",
     "\n",
     "# Import the PEtab problem as a standard AMICI model\n",
     "amici_model = import_petab_problem(\n",
