--- a/doc/examples/example_petab/petab.ipynb
+++ b/doc/examples/example_petab/petab.ipynb
@@ -12,16 +12,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import petab\n",
     "from amici import run_simulation\n",
-    "from amici.petab.petab_import import import_petab_problem\n",
-    "from amici.petab.petab_problem import PetabProblem\n",
-    "from amici.petab.simulations import simulate_petab\n",
+    "from amici.importers.petab.v1 import (\n",
+    "    import_petab_problem,\n",
+    "    simulate_petab,\n",
+    ")\n",
+    "from amici.importers.petab.v1.petab_problem import PetabProblem\n",
     "from amici.plotting import plot_state_trajectories"
    ]
   },
