--- a/doc/examples/example_petab/petab_v2.ipynb
+++ b/doc/examples/example_petab/petab_v2.ipynb
@@ -13,22 +13,19 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "import logging\n",
     "\n",
     "import amici\n",
-    "from amici.petab.petab_importer import *\n",
-    "from amici.petab.simulations import RDATAS\n",
+    "from amici.importers.petab import *\n",
     "from amici.plotting import *\n",
     "from petab.v2 import Problem"
    ],
-   "outputs": [],
-   "execution_count": null
+   "id": "419616ae233de558"
   },
   {
    "cell_type": "markdown",
