Remove ExampleSplinesSwameye2003.ipynb
The example will be added to pypesto (currently only on https://github.com/ICB-DCM/pyPESTO/pull/1619).
This finally gets rid of the circular dependency with pypesto.

Closes #3042.

--- a/doc/examples/example_splines/ExampleSplines.ipynb
+++ b/doc/examples/example_splines/ExampleSplines.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# AMICI Python example \"splines\"\n",
     "\n",
-    "This is an example showing how to add spline assignment rules to a pre-existing SBML model."
+    "This is an example showing how to add spline assignment rules to a pre-existing SBML model.\n",
+    "\n",
+    "A full application example of using splines to parametrize time-dependent unknown inputs followed by parameter estimation with pypesto can be found in the [pypesto documentation](https://pypesto.readthedocs.io/en/latest/example.html#application-examples)."
    ]
   },
   {
